--- a/cmd/web/resource/template/common/header.tmpl
+++ b/cmd/web/resource/template/common/header.tmpl
@@ -22,6 +22,7 @@
         <nav class="my-2 my-md-0 mr-md-3">
             <a class="p-2 text-dark" href="#">仓库管理</a>
             <a class="p-2 text-dark" href="#">交付记录</a>
+            <a class="p-2 text-dark" href="#">主机管理</a>
             <a class="p-2 text-dark" href="#">通知设置</a>
         </nav>
     {{if .isLogin}}
