--- a/cmd/web/resource/template/common/header.tmpl
+++ b/cmd/web/resource/template/common/header.tmpl
@@ -18,12 +18,12 @@
 <body>
 <div class="p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
     <div class="container d-flex flex-column flex-md-row align-items-center">
-        <h5 class="my-0 mr-md-auto font-weight-normal">GoCD</h5>
+        <h5 class="my-0 mr-md-auto font-weight-normal"><a href="/">GoCD</a></h5>
         <nav class="my-2 my-md-0 mr-md-3">
-            <a class="p-2 text-dark" href="#">仓库管理</a>
-            <a class="p-2 text-dark" href="#">交付记录</a>
-            <a class="p-2 text-dark" href="#">主机管理</a>
-            <a class="p-2 text-dark" href="#">通知设置</a>
+            <a class="p-2 text-dark" href="/server"><span class="octicon octicon-server"></span>部署机器</a>
+            <a class="p-2 text-dark" href="/repository/"><span class="octicon octicon-repo"></span>代码仓库</a>
+            <a class="p-2 text-dark" href="/pipeline/"><span class="octicon octicon-zap"></span>持续交付</a>
+            <a class="p-2 text-dark" href="/settings"><span class="octicon octicon-settings"></span>通知配置</a>
         </nav>
     {{if .isLogin}}
         <div class="nav-item dropdown">
@@ -37,7 +37,7 @@
         </div>
     {{else}}
         <form id="loginForm" action="/oauth2/login" method="post">
-            <input type="hidden" name="_csrf" value="{{.csrf_token}}">
+            {{.csrf_token}}
         </form>
         <button onclick="login()" class="btn btn-outline-primary"><span
                 class="octicon octicon-mark-github"></span> 登陆
