--- a/cmd/web/resource/template/common/header.tmpl
+++ b/cmd/web/resource/template/common/header.tmpl
@@ -11,14 +11,14 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://cdn.bootcss.com/octicons/4.4.0/font/octicons.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/static/css/gocd.css">
+    <link rel="stylesheet" href="/static/css/gocd.css?_10000">
 
     <title>GoCD —— Golang 开源持续交付系统</title>
 </head>
 <body>
 <div class="p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
     <div class="container d-flex flex-column flex-md-row align-items-center">
-        <h5 class="my-0 mr-md-auto font-weight-normal"><a href="/">GoCD</a></h5>
+        <h5 class="my-0 mr-md-auto font-weight-normal"><a class="text-secondary" href="/">GoCD</a></h5>
         <nav class="my-2 my-md-0 mr-md-3">
             <a class="p-2 text-dark" href="/server"><span class="octicon octicon-server"></span>部署机器</a>
             <a class="p-2 text-dark" href="/repository/"><span class="octicon octicon-repo"></span>代码仓库</a>
@@ -27,7 +27,7 @@
         </nav>
     {{if .isLogin}}
         <div class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+            <a class="nav-link dropdown-toggle text-secondary" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
                aria-haspopup="true" aria-expanded="false">
                 <span class="octicon octicon-mark-github"></span> {{.user.GName}}
             </a>
