--- a/cmd/web/resource/template/common/footer.tmpl
+++ b/cmd/web/resource/template/common/footer.tmpl
@@ -10,8 +10,10 @@
             <div class="col-6 col-md">
                 <h5>相关链接</h5>
                 <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="#">源代码</a></li>
-                    <li><a class="text-muted" href="#">交流群</a></li>
+                    <li><a class="text-muted" href="https://git.cm/naiba/GoCD">源代码</a></li>
+                    <li><span class="text-muted" data-toggle="tooltip" data-placement="top" title="欢迎加入QQ交流群：710012414">
+                        交流群
+                    </span></li>
                 </ul>
             </div>
             <div class="col-6 col-md">
@@ -38,7 +40,7 @@
 <script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.0/dist/clipboard.min.js"></script>
 <script src="https://cdn.bootcss.com/popper.js/1.12.9/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-<script src="/static/js/gocd.js?_100008"></script>
+<script src="/static/js/gocd.js?_1"></script>
 
 </body>
 </html>
