[up]🎉🎉🎉噗，添加交付流程

--- a/cmd/web/resource/template/common/header.tmpl
+++ b/cmd/web/resource/template/common/header.tmpl
@@ -40,7 +40,7 @@
         <form id="loginForm" action="/oauth2/login" method="post">
         {{.csrf_token}}
         </form>
-        <button onclick="login()" class="btn btn-outline-primary"><span
+        <button onclick="saveForm('#loginForm')" class="btn btn-outline-primary"><span
                 class="octicon octicon-mark-github"></span> 登陆
         </button>
     {{end}}
