--- a/cmd/web/resource/template/server/index.tmpl
+++ b/cmd/web/resource/template/server/index.tmpl
@@ -16,12 +16,12 @@
                         <div class="form-group">
                             <label for="inputPort">SSH 端口号</label>
                             <input name="port" required type="number" class="form-control" id="inputPort"
-                                   placeholder="22">
+                                   value="22">
                         </div>
                         <div class="form-group">
                             <label for="inputLogin">SSH 用户名</label>
                             <input name="login" required type="text" class="form-control" id="inputLogin"
-                                   placeholder="root">
+                                   value="root">
                         </div>
                         <div class="form-group">
                             <label for="inputName">备注名</label>
