[up]完成 WebHook handler

--- a/cmd/web/resource/template/common/footer.tmpl
+++ b/cmd/web/resource/template/common/footer.tmpl
@@ -10,7 +10,7 @@
             <div class="col-6 col-md">
                 <h5>相关链接</h5>
                 <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="https://git.cm/naiba/GoCD">源代码</a></li>
+                    <li><a class="text-muted" href="https://git.cm/naiba/GoCD" target="_blank">源代码</a></li>
                     <li><span class="text-muted" data-toggle="tooltip" data-placement="top" title="欢迎加入QQ交流群：710012414">
                         交流群
                     </span></li>
