--- a/cmd/web/resource/template/common/header.tmpl
+++ b/cmd/web/resource/template/common/header.tmpl
@@ -22,8 +22,8 @@
         <nav class="my-2 my-md-0 mr-md-3">
             <a class="p-2 text-dark" href="/server/"><span class="octicon octicon-server"></span>部署机器</a>
             <a class="p-2 text-dark" href="/repository/"><span class="octicon octicon-repo"></span>项目列表</a>
-            <a class="p-2 text-dark" href="/pipeline/"><span class="octicon octicon-zap"></span>交付记录</a>
-            <a class="p-2 text-dark" href="/settings/"><span class="octicon octicon-settings"></span>通知配置</a>
+            <a class="p-2 text-dark" href="/pipelog/"><span class="octicon octicon-zap"></span>交付记录</a>
+            <a class="p-2 text-dark" href="#"><span class="octicon octicon-settings"></span>通知配置</a>
         </nav>
     {{if .isLogin}}
         <div class="nav-item dropdown">
