--- a/cmd/web/resource/template/pipelog/index.tmpl
+++ b/cmd/web/resource/template/pipelog/index.tmpl
@@ -1,7 +1,7 @@
-{{define "pipeline/index"}}
+{{define "pipelog/index"}}
 {{template "common/header" .}}
 <div class="container">
-    <p>Hello pipeline</p>
+    <p>Hello pipelog</p>
 </div>
 {{template "common/footer" .}}
 {{end}}
