--- a/cmd/web/resource/template/server/index.tmpl
+++ b/cmd/web/resource/template/server/index.tmpl
@@ -48,7 +48,8 @@
             {{range $server := .servers}}
                 <div class="card mb-3">
                     <div class="card-body">
-                        <h5 class="card-title limit-text-length"><span class="octicon octicon-server"></span>{{$server.Name}}</h5>
+                        <h5 class="card-title limit-text-length"><span
+                                class="octicon octicon-server"></span>{{$server.Name}}</h5>
                         <p class="card-text">
                             服务器地址：<samp>{{$server.Address}}</samp><br>
                             服务器端口：<samp>{{$server.Port}}</samp><br>
@@ -56,7 +57,10 @@
                         </p>
                     </div>
                     <div class="card-footer d-flex justify-content-between">
-                        <small class="text-muted p-2"><span class="octicon octicon-clock"></span>Active 3 mins ago
+                        <small class="text-muted p-2">
+                            <span class="octicon octicon-clock"></span>
+                        {{$log := LastServerLog .ID}}
+                            最后活动于{{TimeDiff $log.StoppedAt Now}}前
                         </small>
                         <div>
                             <button class="btn btn-sm btn-secondary"><span class="octicon octicon-pencil"></span>
