[up]增加SSH健壮性

--- a/cmd/web/resource/template/pipelog/index.tmpl
+++ b/cmd/web/resource/template/pipelog/index.tmpl
@@ -26,7 +26,7 @@
                 {{else if eq $l.Status 2}}
                     class="btn btn-danger btn-sm">Server</button>
                 {{else if eq $l.Status 3}}
-                    class="btn btn-danger btn-sm">Shell</button>
+                    class="btn btn-warning btn-sm">Exec</button>
                 {{else}}
                     class="btn btn-secondary btn-sm">None</button>
                 {{end}}
