--- a/cmd/web/resource/template/repository/index.tmpl
+++ b/cmd/web/resource/template/repository/index.tmpl
@@ -133,7 +133,7 @@
                             {{else if eq $log.Status 2}}
                                 class="btn btn-danger btn-sm">Server</a>
                             {{else if eq $log.Status 3}}
-                                class="btn btn-danger btn-sm">Shell</a>
+                                class="btn btn-warning btn-sm">Exec</a>
                             {{else}}
                                 class="btn btn-secondary btn-sm">None</a>
                             {{end}}
