[up]pipeline edit ui

--- a/cmd/web/resource/template/server/index.tmpl
+++ b/cmd/web/resource/template/server/index.tmpl
@@ -15,7 +15,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <form id="formEditServer" method="post" onsubmit="return editServer(isDelete)">
+                    <form id="formEditServer" method="post" onsubmit="return server(isDelete)">
                         <input id="formMethod" name="_method" type="hidden">
                         <input id="inputID" name="id" type="hidden">
                         <div class="form-group">
