--- a/cmd/web/resource/template/repository/index.tmpl
+++ b/cmd/web/resource/template/repository/index.tmpl
@@ -22,12 +22,15 @@
         </div>
     </div>
 {{/*modal add pipeline START*/}}
-    <script> var events = {{.events}};</script>
+    <script>
+        var events = {{.events}};
+        var mth = 'POST';
+    </script>
     <div class="modal fade" id="modalAddPipeline" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">添加交付流程</h5>
+                    <h5 class="modal-title">操作交付流程</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -36,11 +39,12 @@
                     <div class="alert alert-warning" role="alert">
                         请给您的 Git Repo <b>添加 WebHook</b>，WebHook 地址与密钥在项目名称右边的按钮处复制！
                     </div>
-                    <form id="formAddPipeline" method="post" onsubmit="return addPipeline()">
+                    <form id="formAddPipeline" method="post" onsubmit="return pipeline(mth)">
                         <input id="inputHDRepoID" name="repo" type="hidden">
+                        <input id="inputID" name="id" type="hidden">
                         <div class="form-group">
-                            <label for="inputName" class="col-form-label">流程备注：</label>
-                            <input required name="name" type="text" class="form-control" id="inputName">
+                            <label for="iMEditPlName" class="col-form-label">流程备注：</label>
+                            <input required name="name" type="text" class="form-control" id="iMEditPlName">
                         </div>
                         <div class="form-group">
                             <label for="inputBranch" class="col-form-label">监控分支：</label>
@@ -54,8 +58,8 @@
                             <div class="d-inline" id="listEventCheckbox"></div>
                         </div>
                         <div class="form-group">
-                            <label for="inputBranch" class="col-form-label">部署服务器：</label>
-                            <select name="server" class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
+                            <label for="slMPlatform" class="col-form-label">部署服务器：</label>
+                            <select name="server" class="custom-select my-1 mr-sm-2" id="slMPlatform">
                             {{range $server := .servers}}
                                 <option value="{{.ID}}">{{.Name}} - {{.Address}}</option>
                             {{end}}
@@ -70,7 +74,8 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
-                    <button onclick="saveForm('#formAddPipeline')" class="btn btn-primary">添加</button>
+                    <button id="btnEditRepo" onclick="saveForm('#formAddPipeline')" class="btn btn-primary">添加
+                    </button>
                 </div>
             </div>
         </div>
@@ -102,7 +107,7 @@
                         <button class="btn btn-sm btn-secondary pr-1 pl-2">
                             <span class="octicon octicon-pencil"></span>
                         </button>
-                        <button class="btn btn-sm btn-secondary pr-1 pl-2" data-toggle="modal"
+                        <button class="btn btn-sm btn-secondary pr-1 pl-2" data-method="POST" data-toggle="modal"
                                 data-target="#modalAddPipeline" data-repo="{{.ID}}" data-whatever="{{.Platform}}">
                             <span class="octicon octicon-plus"></span>
                         </button>
@@ -139,10 +144,20 @@
                             {{end}}
                             </td>
                             <td style="min-width: 90px">
-                                <button class="btn btn-sm btn-secondary pr-1 pl-2">
+                                <button class="btn btn-sm btn-secondary pr-1 pl-2 " data-method="PATCH"
+                                        data-toggle="modal"
+                                        data-target="#modalAddPipeline" data-id="{{$p.ID}}" data-repo="{{$p.RepositoryID}}" data-name="{{$p.Name}}"
+                                        data-branch="{{$p.Branch}}" data-server="{{$p.ServerID}}"
+                                        data-shell="{{$p.Shell}}"
+                                        data-events="{{$p.Events}}" data-whatever="{{$repo.Platform}}">
                                     <span class="octicon octicon-pencil"></span>
                                 </button>
-                                <button class="btn btn-sm btn-secondary pr-1 pl-2">
+                                <button class="btn btn-sm btn-secondary pr-1 pl-2" data-method="DELETE"
+                                        data-toggle="modal"
+                                        data-target="#modalAddPipeline" data-id="{{$p.ID}}" data-repo="{{$p.RepositoryID}}" data-name="{{$p.Name}}"
+                                        data-branch="{{$p.Branch}}" data-server="{{$p.ServerID}}"
+                                        data-shell="HIDDEN"
+                                        data-events="{{$p.Events}}" data-whatever="{{$repo.Platform}}">
                                     <span class="octicon octicon-trashcan"></span>
                                 </button>
                             </td>
