--- a/cmd/web/resource/template/repository/index.tmpl
+++ b/cmd/web/resource/template/repository/index.tmpl
@@ -3,7 +3,7 @@
 <div class="container">
     <div class="alert alert-secondary pt-4">
         <div class="d-flex justify-content-center">
-            <form id="formAddRepo" class="form-inline" onsubmit="return addRepo()">
+            <form id="formAddRepo" class="form-inline" onsubmit="return addRepoHandler('POST')">
                 <div class="form-group mx-sm-3 mb-2">
                     <label for="inputName">项目名：</label>
                     <input required name="name" type="text" class="form-control" id="inputName" placeholder="项目名称">
@@ -30,7 +30,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">操作交付流程</h5>
+                    <h5 class="modal-title">管理交付流程</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -39,7 +39,7 @@
                     <div class="alert alert-warning" role="alert">
                         请给您的 Git Repo <b>添加 WebHook</b>，WebHook 地址与密钥在项目名称右边的按钮处复制！
                     </div>
-                    <form id="formAddPipeline" method="post" onsubmit="return pipeline(mth)">
+                    <form id="formAddPipeline" method="post" onsubmit="return pipelineHandler(mth)">
                         <input id="inputHDRepoID" name="repo" type="hidden">
                         <input id="inputID" name="id" type="hidden">
                         <div class="form-group">
@@ -81,6 +81,47 @@
         </div>
     </div>
 {{/*modal add pipeline END*/}}
+{{/*modal repo START*/}}
+    <div class="modal fade" id="modalRepo" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">管理项目</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="alert alert-warning" role="alert">
+                        删除仓库，其下的 交付流程及日志 将会一并删除。
+                    </div>
+                    <form id="formEditRepo" onsubmit="return false;">
+                        <input id="inputID" name="id" type="hidden">
+                        <div class="form-group">
+                            <label for="inputName" class="col-form-label">项目名称：</label>
+                            <input required name="name" type="text" class="form-control" id="inputName">
+                        </div>
+                        <div class="form-group">
+                            <label for="selectPlatform">托管平台：</label>
+                            <select name="platform" id="selectPlatform" class="form-control">
+                            {{range $k,$v := .platforms}}
+                                <option value="{{$k}}">{{$v}}</option>
+                            {{end}}
+                            </select>
+                        </div>
+                    {{.csrf_token}}
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
+                    <button id="btnEditRepo" onclick="editRepoHandler('DELETE')" class="btn btn-danger">删除
+                        <button id="btnEditRepo" onclick="editRepoHandler('PATCH')" class="btn btn-primary">更新
+                        </button>
+                </div>
+            </div>
+        </div>
+    </div>
+{{/*modal repo END*/}}
     <div class="card-deck">
     {{range $repo := .repos}}
         <div class="card mb-3" style="min-width: 300px">
@@ -104,7 +145,8 @@
                                 data-placement="top" title="点击复制 WebHook 密钥">
                             <span class="octicon octicon-gist-secret"></span>
                         </button>
-                        <button class="btn btn-sm btn-secondary pr-1 pl-2">
+                        <button class="btn btn-sm btn-secondary pr-1 pl-2" data-toggle="modal"
+                                data-target="#modalRepo" data-id="{{.ID}}" data-name="{{.Name}}" data-platform="{{.Platform}}">
                             <span class="octicon octicon-pencil"></span>
                         </button>
                         <button class="btn btn-sm btn-secondary pr-1 pl-2" data-method="POST" data-toggle="modal"
@@ -146,7 +188,8 @@
                             <td style="min-width: 90px">
                                 <button class="btn btn-sm btn-secondary pr-1 pl-2 " data-method="PATCH"
                                         data-toggle="modal"
-                                        data-target="#modalAddPipeline" data-id="{{$p.ID}}" data-repo="{{$p.RepositoryID}}" data-name="{{$p.Name}}"
+                                        data-target="#modalAddPipeline" data-id="{{$p.ID}}"
+                                        data-repo="{{$p.RepositoryID}}" data-name="{{$p.Name}}"
                                         data-branch="{{$p.Branch}}" data-server="{{$p.ServerID}}"
                                         data-shell="{{$p.Shell}}"
                                         data-events="{{$p.Events}}" data-whatever="{{$repo.Platform}}">
@@ -154,7 +197,8 @@
                                 </button>
                                 <button class="btn btn-sm btn-secondary pr-1 pl-2" data-method="DELETE"
                                         data-toggle="modal"
-                                        data-target="#modalAddPipeline" data-id="{{$p.ID}}" data-repo="{{$p.RepositoryID}}" data-name="{{$p.Name}}"
+                                        data-target="#modalAddPipeline" data-id="{{$p.ID}}"
+                                        data-repo="{{$p.RepositoryID}}" data-name="{{$p.Name}}"
                                         data-branch="{{$p.Branch}}" data-server="{{$p.ServerID}}"
                                         data-shell="HIDDEN"
                                         data-events="{{$p.Events}}" data-whatever="{{$repo.Platform}}">
