--- a/cmd/web/resource/template/server/index.tmpl
+++ b/cmd/web/resource/template/server/index.tmpl
@@ -9,13 +9,13 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">操作服务器</h5>
+                    <h5 class="modal-title">管理服务器</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
-                    <form id="formEditServer" method="post" onsubmit="return server(isDelete)">
+                    <form id="formEditServer" method="post" onsubmit="return editServerHandler(isDelete)">
                         <input id="formMethod" name="_method" type="hidden">
                         <input id="inputID" name="id" type="hidden">
                         <div class="form-group">
@@ -39,7 +39,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
-                    <button id="btnSubmit" onclick="saveForm('#formEditServer')" class="btn btn-primary">操作</button>
+                    <button id="btnSubmit" onclick="saveForm('#formEditServer')" class="btn btn-primary">管理</button>
                 </div>
             </div>
         </div>
@@ -51,7 +51,7 @@
                 <div class="card-body">
                     <h5 class="card-title">添加服务器</h5>
                     <h6 class="card-subtitle mb-2 text-muted">必须先在服务器添加公钥</h6>
-                    <form id="formAddServer" onsubmit="return addServer()">
+                    <form id="formAddServer" onsubmit="return addServerHandler()">
                         <div class="form-group">
                             <label for="inputAddress">服务器 IP 地址或域名</label>
                             <input name="address" required type="text" class="form-control" id="inputAddress"
